--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
 body{
 	background-color: yellowgreen;
 }
+.timer{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+}
